--- a/conda_env.yml
+++ b/conda_env.yml
@@ -4,12 +4,12 @@ channels:
   - defaults
 dependencies:
   - pip=20.0.2=py38_1
-  - python=3.8.17=he550d4f_0_cpython
-  - readline=8.2=h8228510_1
+  - python>=3.8,<3.9
+  - readline>=8.2
   - setuptools=68.0.0=pyhd8ed1ab_0
-  - tk=8.6.12=h27826a3_0
+  - tk>=8.6
   - wheel=0.41.1=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
+  - xz>=5.2
   - pip:
     - absl-py==1.4.0
     - accelerate==0.22.0
