--- a/eval_configs/train_sim_kitchen.yaml
+++ b/eval_configs/train_sim_kitchen.yaml
@@ -44,7 +44,7 @@ env:
 dataset:
   _target_: datasets.sim_kitchen.SimKitchenTrajectoryDataset
   data_directory: ${env_vars.datasets.sim_kitchen}
-  prefetch: True
+  prefetch: False
 
 data:
   window_size: ${window_size}
