--- a/finetune_configs/env_vars/env_vars.yaml
+++ b/finetune_configs/env_vars/env_vars.yaml
@@ -1,8 +1,8 @@
-save_path: /Users/arjunarasappan/Documents/Research Docs/dynamo_ssl  # e.g. root directory of this repo
+save_path: /home/harsh/arjun/dynamo_ssl/  # e.g. root directory of this repo
 wandb_entity: YOUR_WANDB_ENTITY  # e.g. your wandb username
 
 
-dataset_root: /Users/arjunarasappan/Documents/Research Docs/dynamo_ssl/dataset_dir/ # e.g. set this to the unzipped directory of all datasets
+dataset_root: /home/harsh/arjun/dynamo_repro_datasets/ # e.g. set this to the unzipped directory of all datasets
 
 datasets:
     pusht: ${env_vars.dataset_root}/pusht_dataset
