--- a/environment.yaml
+++ b/environment.yaml
@@ -3,6 +3,21 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2024.8.30=hbcca054_0
+  - ld_impl_linux-64=2.43=h712a8e2_1
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgomp=14.2.0=h77fa898_1
+  - libnsl=2.0.1=hd590300_0
+  - libsqlite=3.46.1=hadc24fc_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libzlib=1.3.1=hb9d3cd8_2
+  - ncurses=6.5=he02047a_1
+  - openssl=3.3.2=hb9d3cd8_0
   - pip=20.0.2=py38_1
   - python=3.8.17=he550d4f_0_cpython
   - readline=8.2=h8228510_1
@@ -18,15 +33,16 @@ dependencies:
     - appdirs==1.4.4
     - argon2-cffi==23.1.0
     - argon2-cffi-bindings==21.2.0
+    - asciitree==0.3.3
     - asttokens==2.2.1
     - async-lru==2.0.4
     - attrs==23.1.0
     - av==10.0.0
     - babel==2.12.1
-    - backcall==0.2.0
     - bddl==3.5.0
     - beautifulsoup4==4.12.2
     - bleach==6.0.0
+    - blosc2==2.0.0
     - certifi==2023.7.22
     - cffi==1.15.1
     - charset-normalizer==3.2.0
@@ -37,14 +53,13 @@ dependencies:
     - contourpy==1.1.0
     - cycler==0.11.0
     - cython==0.29.37
-    - git+https://github.com/Farama-Foundation/d4rl@71a9549f2091accff93eeff68f1f3ab2c0e0a288#egg=d4rl
+    - d4rl==1.1
     - debugpy==1.6.7.post1
     - decorator==4.4.2
     - decord==0.6.0
     - defusedxml==0.7.1
     - dm-control==1.0.14
     - dm-env==1.6
-    - dm-tree==0.1.8
     - docker-pycreds==0.4.0
     - easydict==1.13
     - einops==0.6.1
@@ -56,11 +71,11 @@ dependencies:
     - filelock==3.12.2
     - fonttools==4.42.1
     - future==0.18.3
+    - gdown==5.1.0
     - gitdb==4.0.10
     - gitpython==3.1.32
     - glfw==2.6.2
     - gym==0.23.1
-    - gdown==5.1.0
     - h5py==3.9.0
     - huggingface-hub==0.22.2
     - hydra-core==1.3.2
@@ -69,6 +84,7 @@ dependencies:
     - imageio==2.31.1
     - imageio-ffmpeg==0.4.8
     - importlib-resources==6.0.1
+    - iniconfig==2.0.0
     - iopath==0.1.10
     - ipdb==0.13.13
     - ipykernel==6.25.1
@@ -90,16 +106,20 @@ dependencies:
     - jupyterlab-pygments==0.2.2
     - jupyterlab-server==2.24.0
     - jupyterlab-widgets==3.0.8
+    - jupytext==1.16.4
     - kiwisolver==1.4.4
     - labmaze==1.0.6
     - lit==16.0.6
+    - llvmlite==0.41.1
     - lxml==4.9.3
+    - markdown-it-py==3.0.0
     - markupsafe==2.1.3
     - matplotlib==3.7.2
-    - matplotlib-inline==0.1.6
+    - mdit-py-plugins==0.4.2
+    - mdurl==0.1.2
     - mistune==3.0.1
+    - mjrl==1.0.0
     - moviepy==1.0.3
-    - mpmath==1.3.0
     - msgpack==1.0.5
     - mujoco==2.3.7
     - mujoco-py==2.1.2.14
@@ -107,42 +127,35 @@ dependencies:
     - nbconvert==7.7.4
     - nbformat==5.9.2
     - nest-asyncio==1.5.7
-    - networkx==3.1
+    - nltk==3.9.1
     - notebook-shim==0.2.3
+    - numba==0.58.1
+    - numcodecs==0.12.1
+    - numexpr==2.8.6
     - numpy==1.24.4
-    - nvidia-cublas-cu11==11.10.3.66
-    - nvidia-cuda-cupti-cu11==11.7.101
-    - nvidia-cuda-nvrtc-cu11==11.7.99
-    - nvidia-cuda-runtime-cu11==11.7.99
-    - nvidia-cudnn-cu11==8.5.0.96
-    - nvidia-cufft-cu11==10.9.0.58
-    - nvidia-curand-cu11==10.2.10.91
-    - nvidia-cusolver-cu11==11.4.0.1
-    - nvidia-cusparse-cu11==11.7.4.91
-    - nvidia-nccl-cu11==2.14.3
-    - nvidia-nvtx-cu11==11.7.91
+    - nvidia-cudnn-cu12==9.1.0.70
+    - nvidia-nccl-cu12==2.20.5
     - omegaconf==2.3.0
     - opencv-python==4.8.0.76
     - overrides==7.4.0
     - packaging==23.1
     - pandas==2.0.3
     - pandocfilters==1.5.0
-    - parso==0.8.3
     - patchelf==0.17.2.1
     - pathtools==0.1.2
     - pexpect==4.8.0
-    - pickleshare==0.7.5
     - pillow==10.0.0
     - pkgutil-resolve-name==1.3.10
     - platformdirs==3.10.0
+    - pluggy==1.5.0
+    - portalocker==2.10.1
     - prettytable==3.8.0
     - proglog==0.1.10
     - prometheus-client==0.17.1
     - prompt-toolkit==3.0.39
     - protobuf==4.24.1
     - psutil==5.9.5
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.2
+    - py-cpuinfo==9.0.0
     - pybullet==3.2.5
     - pycparser==2.21
     - pygame==2.5.2
@@ -150,9 +163,9 @@ dependencies:
     - pymunk==6.6.0
     - pynput==1.7.6
     - pynvml==11.5.0
-    - pyopengl==3.1.7
     - pyopengl-accelerate==3.1.7
-    - pyparsing==3.0.9
+    - pytest==8.3.3
+    - python-dateutil==2.9.0.post0
     - python-json-logger==2.0.7
     - python-xlib==0.33
     - pyyaml==6.0.1
@@ -163,9 +176,9 @@ dependencies:
     - rfc3986-validator==0.1.1
     - robosuite==1.4.1
     - rpds-py==0.9.2
+    - safetensors==0.4.5
     - scikit-image==0.19.3
     - scikit-learn==1.3.2
-    - scipy==1.10.1
     - send2trash==1.8.2
     - sentry-sdk==1.29.2
     - setproctitle==1.3.2
@@ -176,23 +189,19 @@ dependencies:
     - soupsieve==2.4.1
     - stack-data==0.6.2
     - submitit==1.5.1
-    - sympy==1.12
     - tables==3.8.0
-    - tabulate==0.9.0
     - termcolor==2.3.0
     - terminado==0.17.1
     - threadpoolctl==3.2.0
-    - tifffile==2023.7.10
     - timm==0.9.16
     - tinycss2==1.2.1
-    - tomli==2.0.1
-    - torch==2.0.1
+    - torch==2.4.1+cu121
+    - torchaudio==2.4.1+cu121
     - torchvision==0.15.2
     - tornado==6.3.3
-    - tqdm==4.66.1
     - traitlets==5.9.0
-    - triton==2.0.0
-    - typing-extensions==4.7.1
+    - triton==3.0.0
+    - typing-extensions==4.9.0
     - urllib3==2.0.4
     - wandb==0.15.8
     - wcwidth==0.2.6
@@ -201,4 +210,4 @@ dependencies:
     - widgetsnbextension==4.0.8
     - zarr==2.16.1
     - zipp==3.16.2
-    - git+https://github.com/Farama-Foundation/d4rl.git
+prefix: /home/harsh/miniconda3/envs/dynamo-repro
